[TASK] Fix gap between dropdown menu and parent

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -92,3 +92,6 @@ footer {
   width: 100%;
   height: 90px;
 }
+.dropdown-menu{
+  top: 40px; /*Adjust this to around 33px */
+}
